small touch up to about me, added some box shadowing. Added eduation tab now, for resume and skills to display. Fixed navbar to collapse on select now useing eventkey.

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -10,11 +10,13 @@
 } */
 
 img {
-    width: 75%;
+    width: 70%;
 }
 
 .ImgBox {
-    border: 2px solid white
+    border: 2px solid white;
+    box-shadow: 3px 3px 30px rgb(124, 122, 122);
+    /* border-radius: 50px; */
 }
 
 .AboutMeBox {
@@ -23,6 +25,8 @@ img {
     background-image: url("../../images/miamiCity.jpg");
     background-position: center;
     background-size: cover;
+    /* border-radius: 50px; */
+
 }
 
 .AboutMeContent {
@@ -32,7 +36,7 @@ img {
 .AboutMeContentBox {
     /* margin-top: 5rem; */
     border: 1px solid  rgba(255, 255, 255, 0.333);
-    background-color: rgba(255, 255, 255, 0.562);
+    background-color: rgba(255, 255, 255, 0.603);
     color: black;
     font-weight: 600;
 }
