--- a/src/Pages/Project/Project.css
+++ b/src/Pages/Project/Project.css
@@ -12,6 +12,7 @@
     /* padding: 10px; */
     /* margin: 1rem 2rem; */
     border: none;
+    
 }
 
 .CardImage {
@@ -20,6 +21,8 @@
     height: 300px;
     object-fit: cover;
     overflow:hidden;
+    box-shadow: 3px 3px 9px rgb(0, 0, 0);
+
 }
 
 .CardImage:hover {
